Changes in Release 1.3.0
==============================================
[JOWS-6] - Implement SOAP client
[JOWS-16] -  Update libs for 1.3.0 release

* New object provider support for WS-Security specification
* New object provider support for WS-Addressing specification
* Introduces a new message context Handler and HandlerChain framework
* New support for basic SOAP 1.1 messaging via encoders and decoders

Changes in Release 1.2.2
==============================================
* Minor memory usage enhancements
* Pick up latest version of xmltooling

Changes in Release 1.2.1
==============================================
[JOWS-14] Cleanup StorageService related classes
* Update logging libraries to grab some bug fixes

Changes in Release 1.2.0
=============================================
[JOWS-8] - Allow a filter to be attached to a Resource
[JOWS-9] - SOAP Fault elements faultcode, faultstring, faultactor and detail shouldn't be prefixed
[JOWS-10] - Add constructor to filesystem-related resource providers that take a URL to the file.
[JOWS-11] - ExpiringObjectStorageServiceSweeper does not continuously executes
[JOWS-12] - Add version information in library JAR manifest and provide command line tool to view it
[JOWS-13] - HttpResource is incorrectly handling HTTP Last-Modified header in getLastModifiedTime()


Changes in Release 1.1.0
=============================================
* Addition of contributed WS-Federation Code