@@ -7,6 +7,9 @@ Changes in Release 1.3.0
 * New object provider support for WS-Addressing specification
 * Introduces a new message context Handler and HandlerChain framework
 * New support for basic SOAP 1.1 messaging via encoders and decoders
+* Client certificate authentication security policy rule exposes new protected methods
+  which may be overridden by subclasses to supply the certificate presenter
+  entity ID, and set it when it is successfully dynamically derived.
 
 Changes in Release 1.2.2
 ==============================================
